[package]
name = "sh-exec"
version = "0.1.4"
edition = "2024"
license = "Unlicense"
authors = [ "Christof Fetzer" ]
description = "Set of functions and macros to write more concise rust scripts."
repository = "https://github.com/christoffetzer/shell-exec"
documentation = "https://docs.rs/sh-exec"
homepage = "https://github.com/christoffetzer/shell-exec"
readme = "README.md"
keywords = ["script", "exec", "sh-exec"]
categories = ["development-tools::build-utils"] 

[dependencies]
shells = "0.2.0"
colored = "3.0.0"
log =  "0.4.27"
env_logger = "0.11.7"
